feat: edit rooms
